fixed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,10 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  position: relative;
+}
+
 li {
   list-style: none;
 }
