--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -48,7 +48,7 @@
     flex-direction: column;
     height: 80vh;
     width: 90vw;
-    overflow-x: scroll;
+    overflow-y: scroll;
     &-ascension {
       @include flexCenter;
     }
@@ -84,23 +84,7 @@
       // font-size: 2em;
       display: none;
     }
-    // &-burger {
-    //   display: block;
-    //   position: absolute;
-    //   top: 0;
-    //   left: 0;
-    //   padding: 5px 10px;
-    //   z-index: 10;
-    //   // Box
-    //   background: white;
-    //   box-shadow: inset 0px -10px 10px rgb(#000, 0.5);
-    //   border-top-right-radius: 10px;
-    //   border-bottom-right-radius: 10px;
-    //   // Text
-    //   font-size: 2em;
-    //   font-weight: 900;
-    //   color: $bgcolor_blue1;
-    // }
+
     &-container {
       padding: 0 5px;
     }
